tests/positive/Axiom.juvix
module Axiom;

axiom
Action : Type;
