tests/negative/Termination/Axiom.juvix
module Axiom;

type T := t;

open T;

axiom A
  : let
      x (y : Type) : T := x y;
    in Type;
